feat(troubleshooting): complete Module 28 20-scenario expansion and author 7 Master Reference Guides